Added  token operations for user login page

--- a/Frontends/MultiShop.WebUI/appsettings.json
+++ b/Frontends/MultiShop.WebUI/appsettings.json
@@ -1,4 +1,20 @@
 {
+  //Kullanıcıların tanıtıldığı yer
+  "ClientSettings": {
+
+    "MultiShopVisitorClient": {
+      "ClientId": "MultiShopVisitorId",
+      "ClientSecret": "multishopsecret"
+    },
+    "MultiShopManegerClient": {
+      "ClientId": "MultiShopManagerId",
+      "ClientSecret": "multishopsecret"
+    },
+    "MultiShopAdminClient": {
+      "ClientId": "MultiShopAdminId",
+      "ClientSecret": "multishopsecret"
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
