--- a/Frontends/MultiShop.WebUI/appsettings.json
+++ b/Frontends/MultiShop.WebUI/appsettings.json
@@ -1,4 +1,34 @@
 {
+  "ServiceApiSettings": {
+    "OcelotUrl": "http://localhost:5000",
+    "IdentityServerUrl": "http://localhost:5001",
+
+    "Catalog": {
+      "Path": "services/catalog/"
+    },
+    "Discount": {
+      "Path": "services/images"
+    },
+    "Order": {
+      "Path": "services/order"
+    },
+    "Cargo": {
+      "Path": "services/cargo"
+    },
+    "Basket": {
+      "Path": "services/basket"
+    },
+    "Comment": {
+      "Path": "services/comment"
+    },
+    "Payment": {
+      "Path": "services/payment"
+    },
+    "Image": {
+      "Path": "services/images"
+    }
+  },
+
   //Kullanıcıların tanıtıldığı yer
   "ClientSettings": {
 
