Added message api codes and UI operations

--- a/Frontends/MultiShop.WebUI/appsettings.json
+++ b/Frontends/MultiShop.WebUI/appsettings.json
@@ -26,6 +26,9 @@
     },
     "Image": {
       "Path": "services/images"
+    },
+    "Message": {
+      "Path": "services/message/"
     }
   },
 
