--- a/Services/Message/MultiShop.Message/Properties/launchSettings.json
+++ b/Services/Message/MultiShop.Message/Properties/launchSettings.json
@@ -4,17 +4,17 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:44299",
-      "sslPort": 44336
+      "applicationUrl": "http://localhost:8528",
+      "sslPort": 44346
     }
   },
   "profiles": {
     "MultiShop.Message": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7066;http://localhost:5227",
+      "applicationUrl": "http://localhost:7078;",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
