--- a/Services/Message/MultiShop.Message/appsettings.json
+++ b/Services/Message/MultiShop.Message/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Port=5432;Database=MultiShopMessageDb;User Id=postgres;Password=1234"
+  },
+  "IdentityServerUrl": "http://localhost:5001",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
