--- a/Frontends/MultiShop.WebUI/MultiShop.WebUI.csproj
+++ b/Frontends/MultiShop.WebUI/MultiShop.WebUI.csproj
@@ -12729,6 +12729,7 @@
     <Folder Include="Areas\Admin\Models\" />
     <Folder Include="Areas\User\Data\" />
     <Folder Include="Areas\User\Models\" />
+    <Folder Include="SignalRHub\" />
   </ItemGroup>
 
   <ItemGroup>
