--- a/Services/SignalRRealTime/MultiShop.SignalRRealTimeApi/Properties/launchSettings.json
+++ b/Services/SignalRRealTime/MultiShop.SignalRRealTimeApi/Properties/launchSettings.json
@@ -4,17 +4,17 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:47990",
-      "sslPort": 44365
+      "applicationUrl": "http://localhost:45200",
+      "sslPort": 44326
     }
   },
   "profiles": {
-    "MultiShop.Cargo.WebApi": {
+    "MultiShop.SignalRRealTimeApi": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": false,
+      "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:7073;",
+      "applicationUrl": "https://localhost:7106;http://localhost:5109",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
