Added virtual payment system

--- a/Frontends/MultiShop.WebUI/appsettings.json
+++ b/Frontends/MultiShop.WebUI/appsettings.json
@@ -22,7 +22,7 @@
       "Path": "services/comment/"
     },
     "Payment": {
-      "Path": "services/payment"
+      "Path": "services/payment/"
     },
     "Image": {
       "Path": "services/images"
